testsuite/tests/ghc-regress/indexed-types/should_compile/T3418.hs
{-# LANGUAGE TypeFamilies #-}
module T3418 where

newtype (a ~ b) => S a b = S { unS :: a }
