testsuite/tests/ghc-regress/indexed-types/should_fail/SimpleFail14.hs
{-# LANGUAGE TypeFamilies #-}

module Simple14 where

data T a = T (a~a)

